--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,43 @@
 body{
-  background-color: green;
+  background-color: rgb(223, 228, 223);
 }
 
 .center{
   display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  flex-direction: column;
+}
+
+.btn{
+  width: 200px;
+  height: 40px;
+  text-transform: capitalize;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.increase{
+  background: rgb(13, 155, 183);
+}
+
+.decrease{
+  background: rgb(225, 90, 90);
+}
+
+.reset{
+  background: #b7f04e;
+}
+
+.monitor{
+  height: 50px;
+  background: #eaf1dc;
+  width: 200px;
+  /* text-align: center; */
+  display: flex;
   justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 600;
 }
